[project]
name = "sophie_bot"
version = "4.0-alpha"
description = "Sophie is modern and fast Telegram chat manager bot"
authors = [{ name = "Yacha", email = "yacha@orangefox.tech" }]
requires-python = ">=3.12,<4"
dependencies = [
    "aiogram>=3.21,<4",
    "redis>=7,<8",
    "dnspython>=2.1.0,<3",
    "ujson>=5.1.0,<6",
    "PyYAML>=6.0,<7",
    "sentry-sdk>=2,<3",
    "Babel>=2.9.1,<3",
    "async-timeout>=5,<6",
    "regex>=2026",
    "pydantic[dotenv]>=2,<3",
    "emoji-country-flag>=2,<3",
    "pydantic-settings>=2,<3",
    "structlog>=25,<26",
    "stfu-tg>=3.4,<4",
    "ass-tg",
    "beanie>=2,<3",
    "openai>=2,<3",
    "lingua-language-detector>=2.0.2,<3",
    "numpy>=2,<3",
    "pillow>=12,<13",
    "mem-top>=0.2.1,<0.3",
    "apscheduler>=3.11.2,<4",
    "pydantic-ai-slim[mistral,openai,openrouter,tavily]>=1.44,<2",
    "fastapi>=0.128,<0.129",
    "uvicorn>=0.40,<0.41",
    "prometheus-client>=0.24,<0.25",
    "uvloop>=0.22.1,<0.23",
    "unidecode>=1.4.0,<2",
    "pyjwt>=2.10.1,<3",
    "link>=2.1.4,<3",
    "init-data-py>=0.2.7,<0.3",
    "ty>=0.0.12",
]

[dependency-groups]
dev = [
    "Nuitka>=2,<3",
    "pycln>=2.1,<3",
    "bandit>=1.7,<2",
    "ruff>=0.14,<0.15",
    "devtools[pygments]>=0.12,<0.13",
    "types-ujson>=5.10.0.20240515,<6",
    "types-pytz>=2025,<2026",
    "pytest-asyncio>=1.3.0,<2",
    "allure-pytest>=2.13.5,<3",
    "pytest>=9.0.2,<10",
    "fakeredis>=2.27.0,<3",
    "ty>=0.0.10",
    "babel>=2.17.0",
    "watchfiles>=1.0.0,<2",
]

[tool.uv.sources]
stfu-tg = { path = "./libs/stf" }
ass-tg = { path = "./libs/ass" }

[tool.ty.src]
include = ["sophie_bot/**"]
exclude = ["**/legacy_modules/**", "**/legacy_*.py"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.analysis]
# exclude = ["**/legacy_modules/", '**/legacy_**.py']
# respect-type-ignore-comments = true

[tool.ruff]
line-length = 120
target-version = "py312"

#[tool.ruff.lint]
#select = ["E", "F", "W", "I", "B"]
#ignore = ["E203", "W503"]

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.setuptools.packages.find]
include = ["sophie_bot*"]
