[project]
name = "korone"
version = "0.0.1"
description = "An all-in-one bot for Telegram"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Hitalo M." }]
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.21",
    "redis>=7",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30",
    "ujson>=5.1.0",
    "Babel>=2.9.1",
    "regex>=2025.7",
    "pydantic>=2",
    "emoji-country-flag>=2,<3",
    "pydantic-settings>=2,<3",
    "structlog>=25",
    "stfu-tg>=3.4",
    "ass-tg>=2.4.3",
    "uvloop>=0.21",
    "anyio>=4.12.1",
    "aiohttp[speedups]>=3.13.3",
    "lxml>=6.0.2",
    "pillow>=10.0.0",
    "polib>=1.2.0",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.14.14", "pyright>=1.1.408"]

[build-system]
requires = ["uv_build>=0.7,<0.8"]
build-backend = "uv_build"
