[project]
name = "korone"
version = "0.0.1"
description = "An all-in-one bot for Telegram"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Hitalo M." }]
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.21",
    "redis>=7",
    "alembic>=1.18.4",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30",
    "Babel>=2.9.1",
    "pydantic>=2",
    "emoji-country-flag>=2,<3",
    "pydantic-settings>=2,<3",
    "structlog>=25",
    "stfu-tg>=3.4",
    "ass-tg>=2.4.3",
    "uvloop>=0.21",
    "aiohttp[speedups]>=3.13.3",
    "lxml>=6.0.2",
    "pillow>=10.0.0",
    "polib>=1.2.0",
    "orjson>=3.11.7",
    "sentry-sdk>=2.53.0",
    "url-normalize>=2.2.1",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.14.14", "pyright>=1.1.408"]

[build-system]
requires = ["uv_build>=0.10"]
build-backend = "uv_build"
